## Unreleased

* Changed `newtype Time = Time NominalDiffTime` to `newtype Time = Time Int`
* Changed the fundamental abstraction from SlackBot to SlackHandle

## 0.12

* Remove _prefSpeakGrowls, _prefMacSpeakVoice, _prefMacSpeakSpeed

## 0.11

* Remove *_prefTabUiReturnSelects*

## 0.9

* Export `Id` constructors.
* Expect a `ChannelId` rather than a `Channel` for `ChannelLeft` event
* Remove Group in favour of Channel, a group is just a private channel.
* Remove `_prefAutoplaySounds` field.

## 0.8

* Remove *_prefCollapsible* from `Preferences` as it is sometimes not present.
* Remove *_prefCollapsibleByclick* from `Preferences` as it is sometimes not present.

## 0.7

* Add Prisms for `Event` and `Subevent`.
* Add Lenses for `Preferences`
* Remove _prefFuzzyMatching
* Remove _teamRequireAtForMention
* Add ReconnectUrl type
* Remove deprecated FileUrl keys
* Add TeamMigrationStarted event

## 0.6

* Remove error call when an unknown message type is encountered.
* Remove `userStatus` field in the User datatype
* Add some new event subtypes
* Added a ping thread to make sure WS crashes when it should


## 0.5

* Remove _prefSeenUserMenuTipCard, _prefSeenTeamMenuTipCard, _prefSeenChannelMenuTipCard, prefSeenMessageInputTipCard, prefSeenChannelsTipCard, prefSeen FlexpaneTipcard.

## 0.4

* Remove prefMacSsbBullet, prefWinSsbBullet and prefNoMacssb1Banner as they are
no longer returned by the Slack API
* Compatability changes for GHC 7.10
* Make BotIcons optional


## 0.3

* Change type of `teamIconDefault` to `Maybe Bool` in response to #4
* Parsing the websockets URL is now more robust.

## 0.2.1

* Add ping/pong events.
* Add lenses for `SlackConfig`.
* Make initial configuration availible in `SlackState`.